# lite-taskman

./: LICENSE  README.md  README_zh.md  pyproject.toml
demo/: demo1.py  demo2.py
lite_taskman/: __init__.py  core.py
