[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-taskman"
version = "0.9.1"
readme = "README.md"
authors = [
    {name = "Rocks Wang", email = "rockswang@foxmail.com"}
]
license = {text = "MIT"}
description = "A lightweight thread pool manager supporting dynamic task addition and streaming results."
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["threadpool", "task-manager", "dynamic", "lightweight", "concurrency"]

[project.urls]
"Homepage" = "https://github.com/rockswang/lite-taskman"

[tool.setuptools.packages.find]
where = ["."]